# diplom_hse

./: cv2analytics.py  pyproject.toml  req.pip  req_big_windows.txt  server.py  server_utils.py
ava_aesthetic_predictor/: explain_subset_and_class.ipynb  make_prediction.py
explain_models/: example.ipynb
explain_models/yolo_cam/: __init__.py  activations_and_gradients.py  base_cam.py  eigen_cam.py
explain_models/yolo_cam/utils/: image.py  model_targets.py  svd_on_activations.py
front_app/: index.html  script.js  styles.css
hog_lbp_catboost/: main.ipynb
parser/: cian_parser.py  parser_usage.ipynb
person_detection/: predict_person.py
runs/classify/train13/weights/: best.pt
similarity_metrics/: similarity_metrics.ipynb
train_models/: prepare_dataset.py  train_yolo.py
